@@ -1,3 +1,9 @@
+Fri Jul 25 17:57:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tools/excelRTD/RTDServerDLL.cpp:
+
+        Fix windows wide char build with QT.
+
 Fri Jul 25 17:56:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * tools/modeling/codegen/model/Service_T.cpp:
